# ai-shell-assistant

./: .gitignore  MANIFEST.in  README.md  config.ini  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_aistudio_config.ini  test_config.ini
agent/: agent.py
config/: config.ini
config/shortcuts/: debug.yaml
src/: main.py
src/agent/: agent.py  main.py  shortcuts.py
src/ai_shell_assistant/: assistant.py  cli.py  main.py
src/ai_shell_assistant/agent/: __init__.py  main.py  memory.py  shortcuts.py
src/ai_shell_assistant/toolset/: runcmd.py
src/toolset/: __init__.py  runcmd.py
toolset/: __init__.py  runcmd.py
