[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ai-shell-assistant"
version = "0.1.0"
authors = [
  { name="Juan Ezquerro LLanes", email="arrase@gmail.com" }
]
description = "Una aplicación de consola de asistente de IA."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Elige tu licencia
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "langgraph",
    "langchain-google-vertexai",
    "rich"
]
[project.scripts]
# IMPORTANTE: Ajusta 'ai_shell_assistant.cli:main' a tu paquete/módulo y función real
ai-shell-assistant = "ai_shell_assistant.cli:main"
[tool.setuptools]
include-package-data = true # Necesario para que MANIFEST.in funcione
[tool.setuptools.packages.find]
# Descomenta y ajusta 'where' si tu código está en un directorio 'src/'
where = ["src"]
# Ajusta 'include' si tu paquete principal tiene otro nombre
