[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shell-assistant"
version = "0.1.0"
description = "AI Shell Assistant application"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph",
    "langchain-google-vertexai",
    "langchain-community",
    "langchain-experimental",
    "duckduckgo-search",
    "rich",
]

[project.scripts]
ai-shell-assistant = "ai_shell_assistant.assistant:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
