[metadata]
name = ai-shell-assistant
version = 0.1.0
author = Juan Ezquerro LLanes
author_email = arrase@gmail.com
description = AI-powered shell assistant for executing commands and assisting with development tasks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arrase/ai-shell-assistant
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    langgraph
    langchain-google-vertexai
    langchain-community
    langchain-experimental
    duckduckgo-search
    langchain-ollama
    rich
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ai-shell-assistant = ai_shell_assistant.assistant:main
